syntax = "proto3";

package sf.substreams.internal.v2;

import "google/protobuf/any.proto";
import "sf/substreams/v1/deltas.proto";

option go_package = "github.com/streamingfast/substreams/pb/sf/substreams/intern/v2;pbssinternal";

message ModuleOutput {
    string module_name = 1;
    oneof data {
            google.protobuf.Any map_output = 2;
            sf.substreams.v1.StoreDeltas store_deltas = 3;
    }
    repeated string logs = 4;
    bool debug_logs_truncated = 5;
    bool cached = 6;
}
